Fixing hero text verticle position on mobile

--- a/main.css
+++ b/main.css
@@ -138,16 +138,6 @@ li a:hover:not(.active) {
     text-shadow: 0px 0px 0px rgb(0, 0, 0);
 }
 
-/*
-#product-img {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 190px;
-    border: 1px solid red;
-}
-*/
-
 
 #product-img {
     position: relative;
@@ -176,7 +166,7 @@ li a:hover:not(.active) {
         grid-auto-rows: auto;
         text-align: center;
         position: absolute;
-        top: 25%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: white;
